refactor: use new Java syntax/API